--- a/src/styles/app.sass
+++ b/src/styles/app.sass
@@ -44,6 +44,7 @@ button
 @import ./pages/help
 @import ./pages/contacts
 @import ./pages/my-data
+@import ./pages/favorite
 @import ./common/footer
 @import ./common/_adaptive
 
