--- a/src/templates/pages/index.pug
+++ b/src/templates/pages/index.pug
@@ -39,9 +39,9 @@ block content
                         td
                             a.map-table__link(href="my-data.html" target="_blank") Мои данные
                         td
-                            a.map-table__link(href="all-orders.html" target="_blank") Все заказы
+                            a.map-table__link(href="my-data.html" target="_blank") Все заказы
                         td
-                            a.map-table__link(href="current-orders.html" target="_blank") Текущие заказы
+                            a.map-table__link(href="my-data.html" target="_blank") Текущие заказы
                     tr
                         td
                             a.map-table__link(href="cart.html" target="_blank") Корзина
