--- a/src/styles/pages/index.sass
+++ b/src/styles/pages/index.sass
@@ -122,8 +122,10 @@
     cursor: pointer
     &:hover>.slider3__fav-img
         transform: scale(115%)
-    &:active>.slider3__fav-img
+.fav-btn._active
+    .slider3__fav-img
         color: $color-Black
+        
 .sale
     margin: 80px 0 0 0
 
@@ -140,7 +142,7 @@
                 filter: brightness(0.7)
                 z-index: 0
                 transition: all 0.3s ease 0s
-                
+
     .add-to-cart
         &__box
             display: flex
