--- a/src/styles/app.sass
+++ b/src/styles/app.sass
@@ -45,6 +45,7 @@ button
 @import ./pages/contacts
 @import ./pages/my-data
 @import ./pages/favorite
+@import ./pages/search-result
 @import ./common/footer
 @import ./common/_adaptive
 
