--- a/src/styles/common/_adaptive.sass
+++ b/src/styles/common/_adaptive.sass
@@ -61,7 +61,6 @@
         .ac-content-col__item:last-child
             flex: 0 0 180px
 
-
 @media screen and (max-width: 1024px)
     .section
         margin: 70px 0 0 0
@@ -203,6 +202,10 @@
     .contacts
         margin: 15px 0 0 0
 
+    // favorite page
+    .favorite
+        margin: 15px 0 0 0
+
     // footer
     .footer-top
         .subscribe
@@ -265,7 +268,11 @@
             flex: 1 1 auto
         &__tabs-block#block01._active
             display: flex
-            justify-content: center    
+            justify-content: center
+
+    // search result page
+    .search
+        margin: 15px 0 0 0
 
 @media screen and (max-width: 768px)
     .sub-menu
@@ -317,13 +324,12 @@
         margin: 15px 0 0 0
 
     // my-data page
-
     .account
         margin: 15px 0 0 0
         .ac-trigger
             span
                 margin: 0 15px
-    .account-orders 
+    .account-orders
         .ac-content-col:last-child
             text-align: left
         .ac-trigger
@@ -337,6 +343,14 @@
                 margin: 0
             &::after
                 transform: translate(0, 0)
+
+    // favorite page
+    .favorite
+        margin: 15px 0 0 0
+
+    // search result page
+    .search
+        margin: 15px 0 0 0
 
     //footer
     .footer-top
