--- a/src/styles/pages/my-data.sass
+++ b/src/styles/pages/my-data.sass
@@ -35,7 +35,7 @@
 	&__form
 		width: 100%
 		max-width: 570px
-		padding: 0 10px
+		padding: 0 10px 5px 0
 		display: flex
 		flex-direction: column
 		justify-content: flex-start
