fixed some bugs

--- a/src/styles/pages/subcategory.sass
+++ b/src/styles/pages/subcategory.sass
@@ -114,7 +114,8 @@
 .fav-btn
     &:hover>.goods__fav-img
         transform: scale(115%)
-    &:active>.goods__fav-img
+.fav-btn._active
+    .goods__fav-img
         color: $color-Black
 
 .page-pagination
