--- a/docs/assets/styles/app.css
+++ b/docs/assets/styles/app.css
@@ -1263,7 +1263,7 @@ header._white {
   .account__form {
     width: 100%;
     max-width: 570px;
-    padding: 0 10px;
+    padding: 0 10px 5px 0;
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
