changed good-card page

--- a/src/templates/pages/good-card.pug
+++ b/src/templates/pages/good-card.pug
@@ -40,6 +40,10 @@ block content
                                             .slider-vertical__img-box 
                                                 img.slider-vertical__img(src="assets/images/good-card-img-3.jpg" alt="Фото модели в чёрной футболке" data-zoomable)
                         .good-card__info
+                            .good-card__info-heading 
+                                h2.good-card__title
+                                span.good-card__vendor-code
+                                span
             section.section.popular.section__slider
                 .container
                     .section__heading.slider__heading 
