finished layout of modals and order-complete page

--- a/src/styles/common/_adaptive.sass
+++ b/src/styles/common/_adaptive.sass
@@ -206,6 +206,10 @@
     .favorite
         margin: 15px 0 0 0
 
+    // order-complete page
+    .order-complete    
+        margin: 15px 0 0 0
+
     // footer
     .footer-top
         .subscribe
@@ -350,6 +354,10 @@
 
     // search result page
     .search
+        margin: 15px 0 0 0
+
+    // order-complete page
+    .order-complete    
         margin: 15px 0 0 0
 
     //footer
@@ -553,3 +561,17 @@
                 max-width: unset
                 width: 100%
                 margin: 10px auto
+
+    .modal
+        &__body
+            padding: 20px 15px
+        &__content
+            padding: 20px 10px
+        &__form
+            gap: 20px
+        &__btn-block
+            flex-wrap: wrap
+            gap: 20px
+            button,
+            a
+                max-width: 100%
