--- a/src/templates/components/header.pug
+++ b/src/templates/components/header.pug
@@ -1,4 +1,4 @@
-header.header-top
+header.header-top.lock-padding
 	.container.header-top__container 
 		.header-top__menu.menu
 			.header-top__menu-icon.menu__icon
@@ -23,12 +23,12 @@ header.header-top
 					li.header-top__list-item.menu__item
 						a(href="cart.html").header-top__menu-link.menu__link Корзина
 					li.header-top__list-item.menu__item
-						a(href="search-result.html").header-top__menu-link.menu__link Поиск
-		.header-top__logo-box 
+						a(href="#modal01").header-top__menu-link.menu__link.modal__link Поиск
+		.header-top__logo-box.lock-padding
 			a.header-top__logo-link(href="home-page.html")
 				svg.header-top__logo-img(width="150" height="46")  
 					use(xlink:href="./assets/images/sprite.svg#logo-white" alt="Champler logo")
-header.header-bottom
+header.header-bottom.lock-padding
 	section.header-bottom__banner 
 		.header-bottom__img-box
 			img.header-bottom__img.header-bottom__img_for-men(src="assets/images/header-bottom-bg-img.jpg", alt="Фото мужчины")
