--- a/src/templates/template.pug
+++ b/src/templates/template.pug
@@ -28,6 +28,7 @@ html
 			include components/contact.pug
 
 		include components/footer.pug
+		include components/modal.pug
 
 		//- https://imask.js.org
 		script(src="assets/scripts/imask.min.js")
@@ -43,6 +44,8 @@ html
 
 		//- https://github.com/WICG/focus-visible
 		script(src="assets/scripts/focus-visible.min.js")
+
+		script(src="assets/scripts/modal.js")
 		
 		script(src="assets/scripts/main.js")
 		
