--- a/src/styles/pages/map.sass
+++ b/src/styles/pages/map.sass
@@ -1,11 +1,14 @@
 @import ../common/_vars
 
+.map.wrapper
+    overflow: auto
 .map
     width: 100%
     height: 100vh
     background-color: $color-graphite
     overflow-y: auto
     padding: 40px 0
+
     &__logo-box
         margin: 0 auto
         display: flex
