finished layout of project

--- a/src/styles/app.sass
+++ b/src/styles/app.sass
@@ -48,6 +48,7 @@ button
 @import ./pages/favorite
 @import ./pages/search-result
 @import ./pages/order-complete
+@import ./pages/not-found
 @import ./common/footer
 @import ./common/modal
 @import ./common/_adaptive
