--- a/src/styles/common/_adaptive.sass
+++ b/src/styles/common/_adaptive.sass
@@ -278,6 +278,10 @@
     .search
         margin: 15px 0 0 0
 
+    // not-found page
+    .not-found
+        margin: 15px 0 0 0
+
 @media screen and (max-width: 768px)
     .sub-menu
         &__list
@@ -358,6 +362,10 @@
 
     // order-complete page
     .order-complete    
+        margin: 15px 0 0 0
+
+    // not-found page
+    .not-found
         margin: 15px 0 0 0
 
     //footer
@@ -551,6 +559,20 @@
             flex-direction: column
 
 @media screen and (max-width: 425px)
+
+    .not-found
+        &__content
+            gap: 30px
+        &__title
+            font-size: 27px
+            line-height: 110%
+        &__text
+            font-size: 22px
+            line-height: 120%
+        &__inner-content
+            font-size: 98px
+            margin: 0
+
     .footer-top
         .subscribe
             &__input-block
