--- a/src/templates/pages/index.pug
+++ b/src/templates/pages/index.pug
@@ -62,3 +62,6 @@ block content
                             a.map-table__link.modal__link(href="#modal02") Вход (modal)
                         td
                             a.map-table__link.modal__link(href="#modal03") Регистрация (modal)
+                    tr
+                        td
+                            a.map-table__link(href="not-found.html" target="_blank") 404
