--- a/docs/assets/styles/app.css
+++ b/docs/assets/styles/app.css
@@ -136,6 +136,9 @@ select {
     transition-duration: 0.01ms !important;
     scroll-behavior: auto !important; } }
 
+.map.wrapper {
+  overflow: auto; }
+
 .map {
   width: 100%;
   height: 100vh;
@@ -190,7 +193,8 @@ body {
   display: flex;
   flex-direction: column; }
 
-body._lock {
+body._lock,
+body._locked {
   overflow: hidden; }
 
 button {
@@ -758,7 +762,7 @@ header._white {
 .fav-btn:hover > .goods__fav-img {
   transform: scale(115%); }
 
-.fav-btn:active > .goods__fav-img {
+.fav-btn._active .goods__fav-img {
   color: #000000; }
 
 .page-pagination__block {
@@ -1484,6 +1488,29 @@ header._white {
 .search {
   margin: 28px 0 0 0; }
 
+.order-complete {
+  margin: 28px 0 0 0; }
+  .order-complete__text {
+    font-size: 16px;
+    line-height: 140%;
+    margin: 22px 0 0 0; }
+  .order-complete__link {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    max-width: 232px;
+    width: 100%;
+    min-height: 50px;
+    background-color: #3D3D3D;
+    border-radius: 5px;
+    color: #ffffff;
+    font-size: 14px;
+    line-height: 150%;
+    text-transform: uppercase;
+    margin: 56px 0 0 0; }
+    .order-complete__link:hover {
+      box-shadow: 0 0 3px 3px #3D3D3D; }
+
 footer._hidden {
   display: none; }
 
@@ -1714,6 +1741,227 @@ footer._hidden {
     .footer-bottom__btn:hover {
       box-shadow: 0 0 5px 0 #ffffff; }
 
+.modal {
+  background-color: #3D3D3D;
+  width: 100%;
+  height: 100%;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 10;
+  opacity: 0;
+  visibility: hidden;
+  transition: all 0.8s ease 0s;
+  overflow-y: auto;
+  overflow-x: hidden; }
+  .modal__body {
+    min-height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 30px; }
+  .modal__content {
+    max-width: 830px;
+    min-height: 530px;
+    padding: 70px 115px 65px 115px;
+    position: relative;
+    background: #FFFFFF;
+    z-index: 5;
+    transform: translate(0, -100%);
+    transition: all 0.8s ease 0s;
+    opacity: 0; }
+  .modal__content._active {
+    transform: translate(0, 0);
+    opacity: 1; }
+  .modal__close {
+    position: absolute;
+    top: 0;
+    right: 0;
+    padding: 20px;
+    background-color: transparent; }
+    .modal__close:hover {
+      transform: scale(110%); }
+  .modal__form {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 30px;
+    margin: 32px 0 0 0;
+    width: 100%;
+    height: 100%; }
+    .modal__form input {
+      width: 100%;
+      min-height: 50px;
+      background-color: #F9F9F9;
+      border: 1px solid #D9D9D9;
+      padding: 14px 20px;
+      font-size: 16px;
+      line-height: 140%;
+      color: #000000; }
+  .modal__search {
+    max-width: 950px;
+    width: 100%;
+    height: 100%;
+    min-height: unset;
+    background-color: #3D3D3D;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 5px;
+    position: relative; }
+    .modal__search .close-modal {
+      top: -50px;
+      right: 0; }
+      .modal__search .close-modal svg {
+        color: #ffffff; }
+  .modal__search-form {
+    max-width: 930px;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative; }
+    .modal__search-form input {
+      max-width: 930px;
+      width: 100%;
+      border: 1px solid #ffffff;
+      padding: 13px 20px;
+      font-size: 16px;
+      line-height: 140%;
+      background-color: #3D3D3D;
+      color: #ffffff; }
+  .modal__search-button {
+    position: absolute;
+    top: 50%;
+    transform: translate(0, -50%);
+    left: auto;
+    right: 20px; }
+    .modal__search-button::-moz-placeholder {
+      font-size: 16px;
+      line-height: 140%;
+      color: #999999; }
+    .modal__search-button:-ms-input-placeholder {
+      font-size: 16px;
+      line-height: 140%;
+      color: #999999; }
+    .modal__search-button::placeholder {
+      font-size: 16px;
+      line-height: 140%;
+      color: #999999; }
+  .modal__title {
+    font-weight: bold;
+    font-size: 24px;
+    line-height: 28px;
+    text-align: center; }
+  .modal__text {
+    font-size: 16px;
+    line-height: 140%;
+    max-width: 254px;
+    width: 100%;
+    text-align: center;
+    margin: 22px 0 0 0; }
+  .modal__sign-in-content {
+    max-width: 460px;
+    width: 100%;
+    min-height: 410px;
+    padding: 50px 30px 38px 30px; }
+  .modal__sign-in-btn-block {
+    width: 100%;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    gap: 30px;
+    margin: 10px 0 -10px 0; }
+  .modal__sign-in-btn-in {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    max-width: 100px;
+    width: 100%;
+    min-height: 50px;
+    background-color: #3D3D3D;
+    border-radius: 5px;
+    color: #ffffff;
+    font-size: 14px;
+    line-height: 150%;
+    text-transform: uppercase; }
+    .modal__sign-in-btn-in:hover {
+      box-shadow: 0 0 3px 3px #3D3D3D; }
+  .modal__sign-in-btn-up {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    max-width: 220px;
+    width: 100%;
+    min-height: 50px;
+    border: 1px solid #3D3D3D;
+    border-radius: 5px;
+    font-size: 14px;
+    line-height: 150%;
+    text-transform: uppercase;
+    color: #3D3D3D; }
+    .modal__sign-in-btn-up:hover {
+      box-shadow: 0 0 3px 3px #3D3D3D; }
+  .modal__sign-in-if-forget {
+    width: 100%;
+    height: 100%;
+    text-align: left;
+    font-size: 16px;
+    line-height: 140%;
+    color: #999999; }
+  .modal .if-forget__link {
+    font-size: 16px;
+    line-height: 140%;
+    color: #999999; }
+    .modal .if-forget__link:hover {
+      text-decoration: underline; }
+  .modal__sign-up-content {
+    padding: 50px 30px;
+    max-width: 460px;
+    width: 100%;
+    min-height: 620px; }
+  .modal__sign-up-btn-in {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    max-width: 100px;
+    width: 100%;
+    min-height: 50px;
+    border: 1px solid #3D3D3D;
+    border-radius: 5px;
+    font-size: 14px;
+    line-height: 150%;
+    text-transform: uppercase;
+    color: #3D3D3D;
+    background-color: transparent; }
+    .modal__sign-up-btn-in:hover {
+      box-shadow: 0 0 3px 3px #3D3D3D; }
+  .modal__sign-up-btn-up {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    max-width: 220px;
+    width: 100%;
+    min-height: 50px;
+    background-color: #3D3D3D;
+    border-radius: 5px;
+    color: #ffffff;
+    font-size: 14px;
+    line-height: 150%;
+    text-transform: uppercase; }
+    .modal__sign-up-btn-up:hover {
+      box-shadow: 0 0 3px 3px #3D3D3D; }
+
+.modal._active {
+  opacity: 1;
+  visibility: visible; }
+
+.modal._active .modal__content {
+  transform: translate(0, 0);
+  opacity: 1; }
+
 @media screen and (max-width: 1440px) {
   .collection .slider4 .swiper-button-next {
     left: 48.7%; } }
@@ -1875,6 +2123,8 @@ footer._hidden {
     margin: 15px 0 0 0; }
   .favorite {
     margin: 15px 0 0 0; }
+  .order-complete {
+    margin: 15px 0 0 0; }
   .footer-top .subscribe {
     margin: 70px 0; }
     .footer-top .subscribe__form {
@@ -1988,6 +2238,8 @@ footer._hidden {
   .favorite {
     margin: 15px 0 0 0; }
   .search {
+    margin: 15px 0 0 0; }
+  .order-complete {
     margin: 15px 0 0 0; }
   .footer-top .subscribe {
     margin: 35px 0; }
@@ -2164,4 +2416,16 @@ footer._hidden {
   .footer-top .subscribe__btn {
     max-width: unset;
     width: 100%;
-    margin: 10px auto; } }
+    margin: 10px auto; }
+  .modal__body {
+    padding: 20px 15px; }
+  .modal__content {
+    padding: 20px 10px; }
+  .modal__form {
+    gap: 20px; }
+  .modal__btn-block {
+    flex-wrap: wrap;
+    gap: 20px; }
+    .modal__btn-block button,
+    .modal__btn-block a {
+      max-width: 100%; } }
