--- a/docs/assets/styles/app.css
+++ b/docs/assets/styles/app.css
@@ -1511,6 +1511,48 @@ header._white {
     .order-complete__link:hover {
       box-shadow: 0 0 3px 3px #3D3D3D; }
 
+.not-found {
+  width: 100%;
+  margin: 28px 0 0 0; }
+  .not-found__content {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 50px; }
+  .not-found__title {
+    font-weight: bold;
+    font-size: 36px;
+    line-height: 50px;
+    text-align: center; }
+  .not-found__text-block {
+    max-width: 824px;
+    width: 100%; }
+  .not-found__text {
+    font-weight: bold;
+    font-size: 24px;
+    line-height: 33px;
+    text-align: center;
+    color: #111111; }
+  .not-found__link {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    max-width: 143px;
+    width: 100%;
+    min-height: 50px;
+    background-color: #3D3D3D;
+    border-radius: 5px;
+    font-size: 14px;
+    line-height: 150%;
+    color: #ffffff;
+    text-transform: uppercase; }
+  .not-found__inner-content {
+    font-weight: bold;
+    font-size: 120px;
+    line-height: 166px;
+    margin: 10px 0 0 0; }
+
 footer._hidden {
   display: none; }
 
@@ -2180,6 +2222,8 @@ footer._hidden {
       display: flex;
       justify-content: center; }
   .search {
+    margin: 15px 0 0 0; }
+  .not-found {
     margin: 15px 0 0 0; } }
 
 @media screen and (max-width: 768px) {
@@ -2240,6 +2284,8 @@ footer._hidden {
   .search {
     margin: 15px 0 0 0; }
   .order-complete {
+    margin: 15px 0 0 0; }
+  .not-found {
     margin: 15px 0 0 0; }
   .footer-top .subscribe {
     margin: 35px 0; }
@@ -2409,6 +2455,17 @@ footer._hidden {
     flex-direction: column; } }
 
 @media screen and (max-width: 425px) {
+  .not-found__content {
+    gap: 30px; }
+  .not-found__title {
+    font-size: 27px;
+    line-height: 110%; }
+  .not-found__text {
+    font-size: 22px;
+    line-height: 120%; }
+  .not-found__inner-content {
+    font-size: 98px;
+    margin: 0; }
   .footer-top .subscribe__input-block {
     flex-direction: column; }
   .footer-top .subscribe__input {
