--- a/src/templates/pages/home-page.pug
+++ b/src/templates/pages/home-page.pug
@@ -293,7 +293,7 @@ block content
                         h2.section__title Коллекции
                     .collection__slider 
                         .swiper-container.slider4
-                            .swiper-button-next
+                            .swiper-button-next.slider4__btn-next
                                 svg.slider3__fav-img(width="50" height="50")
                                     use(xlink:href="./assets/images/sprite.svg#slider4-button-next" alt="Круглая кнопка со стрелкой направо")
                             .swiper-wrapper
