fixed bugs on home page

--- a/src/templates/pages/home-page.pug
+++ b/src/templates/pages/home-page.pug
@@ -294,7 +294,7 @@ block content
                     .collection__slider 
                         .swiper-container.slider4
                             .swiper-button-next.slider4__btn-next
-                                svg.slider3__fav-img(width="50" height="50")
+                                svg.slider4__btn-img(width="50" height="50")
                                     use(xlink:href="./assets/images/sprite.svg#slider4-button-next" alt="Круглая кнопка со стрелкой направо")
                             .swiper-wrapper
                                 .swiper-slide
