--- a/src/styles/common/_adaptive.sass
+++ b/src/styles/common/_adaptive.sass
@@ -148,7 +148,7 @@
             font-size: 42px
 
     .collection
-        .slider4
+        &__slider
             width: 1280px
 
     //subcategory page
@@ -296,7 +296,7 @@
         max-width: 75%
 
     .collection
-        .slider4
+        &__slider
             width: 1100px
             &__item-link
                 font-size: $section-title-tablet
