--- a/src/styles/pages/index.sass
+++ b/src/styles/pages/index.sass
@@ -147,6 +147,9 @@
         display: inline-block
 
 .fav-btn
+    width: 100%
+    height: 57px
+    max-width: 57px
     top: 0
     left: 0
     padding: 20px
@@ -292,8 +295,11 @@
     width: 100%
     &__heading
         margin-bottom: 41px
-    .slider4
+    &__slider
         width: 1870px
+        // overflow: hidden
+    .slider4
+        width: 100%
         .swiper-button-next
             right: 0
             left: 74%
@@ -320,7 +326,7 @@
         &__img-box
             overflow: hidden
             img
-                transform: scale(100%)
+                transform: scale(1)
                 transition: transform 0.3s ease 0s
         &__item:hover> .slider4__img-box img
-            transform: scale(110%)
+            transform: scale(1.1)
